--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,1 +1,10 @@
-<h1>This is my portfolio</h1>
+<h1>Salaar's Portfolio</h1>
+
+{% for project in projects %}
+
+<h3>{{ project.title }}</h3>
+<h5>{{ project.date }}</h5>
+<img src="{{ project.image.url }}" alt="{{ project.title }}" height="300" width="300">
+<br>
+<a href="{{ project.url }}"></a>
+{% endfor %}
