--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,10 +1,13 @@
 <h1>Salaar's Portfolio</h1>
 
+{% load static %}
+<img src="{% static 'portfolio/dp.jpg' %}">
+<a href="{% static 'portfolio/cv.pdf' %}">CV</a>
 {% for project in projects %}
 
 <h3>{{ project.title }}</h3>
 <h5>{{ project.date }}</h5>
 <img src="{{ project.image.url }}" alt="{{ project.title }}" height="300" width="300">
 <br>
-<a href="{{ project.url }}"></a>
+<a href="{{ project.url }}">Link</a>
 {% endfor %}
