--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,11 +1,12 @@
 <h1>Salaar's Portfolio</h1>
 
+<a href="{%url 'blog:all_blogs' %}">Blogs</a>
 {% load static %}
-<a href="{% static 'portfolio/cv.pdf' %}">CV</a>
+<a href="{% static 'portfolio/cv.pdf' %}">Resume</a>
 {% for project in projects %}
 
 <h3>{{ project.title }}</h3>
-<h5>{{ project.date }}</h5>
+<h5>{{ project.date|date:'M d Y' }}</h5>
 <img src="{{ project.image.url }}" alt="{{ project.title }}" height="300" width="300">
 <br>
 <a href="{{ project.url }}">Link</a>
