--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -1,6 +1,11 @@
+{% extends 'portfolio/base.html' %}
+{% block content %}
+
 <h1>{{ blog.title }}</h1>
 
 <h3>---{{ blog.date|date:'M jS Y' }}---</h3>
 
 {{ blog.description|safe}}
+
+{% endblock %}
 
