--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,3 +1,6 @@
+{% extends 'portfolio/base.html' %}
+{% block content %}
+
 <h1>Salaar's Portfolio</h1>
 
 <a href="{%url 'blog:all_blogs' %}">Blogs</a>
@@ -11,3 +14,5 @@
 <br>
 <a href="{{ project.url }}">Link</a>
 {% endfor %}
+
+{% endblock %}
