--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,9 +1,9 @@
 /* ----------------------------------
 
-Template Name: Anada - Data Science & Analytics Template
-Author: validtheme
+
+Author: salaarkhan
 Description:
-Version: 1.7.2
+Version: 1.7
 
 Main Font    : Nunito
 Main Color   : #437eeb
@@ -398,7 +398,7 @@ input {
 }
 
 .default-padding-top.bottom-less {
-    margin-bottom: -30px;
+  padding-bottom: 90px;
 }
 
 .default-padding.bottom-30 {
@@ -585,10 +585,6 @@ input {
 
 .bg-dark {
   background: #111d30 none repeat scroll 0 0 !important;
-}
-
-.bg-dark-hard {
-    background: #08111e;
 }
 
 .bg-gradient {
@@ -2883,17 +2879,6 @@ body,
   border-radius: 50%;
 }
 
-.our-features-area .left-info .info {
-    padding-left: 0;
-}
-
-.our-features-area .left-info {
-    padding-right: 35px;
-}
-
-.our-features-area .left-info .skill-items {
-    margin-top: 30px;
-}
 
 /* Features List */
 
