--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -254,7 +254,7 @@
                                 </div>
                             </div>
                             <div class="progress-box">
-                                <h5>HTML/CSS <span class="float-right">82%</span></h5>
+                                <h5>HTML/CSS/Django <span class="float-right">82%</span></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" data-width="82"></div>
                                 </div>
@@ -293,7 +293,7 @@
                     </div>
                     <div class="col-lg-6 offset-lg-1">
                         
-                        <a class="btn circle btn-md btn-gradient wow fadeInUp" target="_blank" rel="noopener noreferrer" href="https://github.com/salaarkhan-dev">View All <i class="fas fa-plus"></i></a>
+                        <a class="btn circle btn-md btn-gradient wow fadeInUp" target="_blank" rel="noopener noreferrer" href="https://github.com/salaarkhan-dev?tab=repositories">View All <i class="fas fa-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -301,6 +301,7 @@
                 <div class="row">
                     <!-- Single Item -->
                     {% for project in projects %}
+
                     <div class="col-lg-4 col-md-6 single-item">
                         <div class="item">
                             <div class="thumb">
