Complete Blogs Functionality

--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,16 +1,358 @@
-{% extends 'portfolio/base.html' %}
-{% block content %}
-
-<h1>Salaar's Blogs</h1>
+{% load static %}
 
 
-<h1>Salaar have written {{ blogs.count }} blog{{ blogs|pluralize}}</h1>
-{% for blog in blogs %}
 
-<a href="{% url 'blog:details' blog.id %}"><h3>{{ blog.title }}</h3></a>
-<h5>{{ blog.date|date:'M d Y' }}</h5>
-<p>{{ blog.description|striptags|truncatechars:100 }} </p>
-<br>
-{% endfor %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% endblock %}
+
+<head>
+    <!-- ========== Meta Tags ========== -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Anada - Data Science & Analytics Template">
+
+    <!-- ========== Page Title ========== -->
+    <title>Salaar Khan - Impossible is nothing</title>
+
+    <!-- ========== Favicon Icon ========== -->
+    <link rel="shortcut icon" href="{% static 'portfolio/assets/img/favicon.png' %}" type="image/x-icon">
+
+    <!-- ========== Start Stylesheet ========== -->
+    <link href="{% static 'portfolio/assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/themify-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/flaticon-set.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/magnific-popup.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/animate.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/assets/css/bootsnav.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/style.css' %}" rel="stylesheet">
+    <link href="{% static 'portfolio/assets/css/responsive.css' %}" rel="stylesheet" />
+    <!-- ========== End Stylesheet ========== -->
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="assets/js/html5/html5shiv.min.js"></script>
+      <script src="assets/js/html5/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- ========== Google Fonts ========== -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <!-- Preloader Start -->
+    <div class="se-pre-con"></div>
+    <!-- Preloader Ends -->
+
+    <!-- Header 
+    ============================================= -->
+    <header id="home">
+
+      <!-- Start Navigation -->
+      <nav class="navbar navbar-default transparent navbar-fixed navbar-transparent white bootsnav">
+
+          <div class="container">
+
+              <!-- Start Header Navigation -->
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                      <i class="fa fa-bars"></i>
+                  </button>
+                  <a class="navbar-brand smooth-menu" href="#home">
+                      <img src="{% static 'portfolio/assets/img/logo-light.png' %}" class="logo logo-display" alt="Logo">
+                      <img src="{% static 'portfolio/assets/img/logo.png' %}" class="logo logo-scrolled" alt="Logo">
+                  </a>
+              </div>
+              <!-- End Header Navigation -->
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="navbar-menu">
+                  <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                      
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#about1">About</a>
+                      </li>
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#services">Services</a>
+                      </li>
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#features">Features</a>
+                      </li>
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#skill">Skills</a>
+                      </li>
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#portfolio">Portfolio</a>
+                      </li>
+                      <li>
+                          <a class="smooth-menu" href="{% url 'home' %}#contact">Contact</a>
+                      </li>
+                      <li>
+                        <a class="smooth-menu" href="{% url 'blog:all_blogs' %}">Blogs</a>
+                    </li>
+                      <li>
+                          <a class="smooth-menu" href="{% static 'portfolio/assets/cv/cv.pdf' %}" download>View CV</a>
+                      </li>
+                  </ul>
+              </div><!-- /.navbar-collapse -->
+          </div>
+
+      </nav>
+      <!-- End Navigation -->
+
+  </header>
+  <!-- End Header -->
+
+    <!-- Start Breadcrumb 
+    ============================================= -->
+    <div class="breadcrumb-area gradient-bg text-light text-center">
+        <!-- Fixed BG -->
+        <div class="fixed-bg" style="background-image: url({% static 'portfolio/assets/img/shape/1.png' %});"></div>
+        <!-- Fixed BG -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <h1>Salaar have written {{ blogs.count }} blog{{ blogs|pluralize}}</h1>
+                    <ul class="breadcrumb">
+                        <li><a href="#"><i class="fas fa-home"></i> Blog</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Breadcrumb -->
+
+    <!-- Start Blog
+    ============================================= -->
+    <div class="blog-area full-blog blog-standard full-blog default-padding">
+        <div class="container">
+            <div class="blog-items">
+                <div class="blog-content">
+                    <div class="blog-item-box">
+                        <div class="row">
+
+                            {% for blog in blogs %}
+                            <!-- Single Item -->
+                            <div class="col-lg-4 col-md-6 single-item">
+                                <div class="item">
+                                    <div class="thumb">
+                                        <a href="{% url 'blog:details' blog.id %}">
+                                            <img src="{{ blog.image.url }}" alt="Thumb">
+                                            <div class="date">
+                                                {{ blog.date|date:'d M' }} <strong>{{ blog.date|date:'Y' }}</strong>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="info">
+                                        <div class="meta">
+                                            <ul>
+                                                <li>
+                                                    <i class="fas fa-folder-open"></i>
+                                                </li>
+                                                <li>
+                                                    <a href="#">{{ blog.tags }}</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <a href="{% url 'blog:details' blog.id %}">
+                                            <h3>{{ blog.title }}</h3>
+                                        </a>
+                                        <p>
+                                            {{ blog.description|striptags|truncatechars:100 }}
+                                        </p>
+                                         <a class="btn-simple" href="{% url 'blog:details' blog.id %}"><i class="fas fa-angle-right"></i> Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Single Item -->
+                            {% endfor %}
+                        </div>
+                        
+                        <!-- Pagination -->
+                        <div class="row">
+                            <div class="col-md-12 pagi-area text-center">
+                                <nav aria-label="navigation">
+                                    <ul class="pagination">
+                                        <li class="page-item"><a class="page-link" href="#"><i class="fas fa-angle-double-left"></i></a></li>
+                                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item"><a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Blog -->
+
+     <!-- Star Footer
+    ============================================= -->
+    <footer class="bg-dark text-light">
+      <div class="container">
+          <div class="f-items default-padding">
+              <div class="row">
+                  <div class="equal-height col-lg-4 col-md-6 item">
+                      <div class="f-item about">
+                          <a class="smooth-menu" href="{% url 'home' %}#home"><img src="{%static 'portfolio/assets/img/logo-light.png' %}" alt="Logo"></a>
+                          <p>
+                              My goal is to satisfy the cutomer with my services. 
+                               I am eager to elaborate my skills through the tasks given to me. :)
+                          </p>
+                      </div>
+                  </div>
+
+                  <div class="equal-height col-lg-2 col-md-6 item">
+                      <div class="f-item link">
+                          <h4 class="widget-title">Usefull Links</h4>
+                          <ul>
+                              <li>
+                                  <a class="smooth-menu" href="{% url 'home' %}#about1">About</a>
+                              </li>
+
+                              <li>
+                                  <a class="smooth-menu" href="{% url 'home' %}#services">Services</a>
+                              </li>
+                              
+                              <li>
+                                  <a class="smooth-menu" href="{% url 'home' %}#portfolio">Projects</a>
+                              </li>
+                              <li>
+                                  <a class="smooth-menu" href="{% url 'home' %}#contact">Contact</a>
+                              </li>
+                              <li>
+                                  <a class="smooth-menu" href="{% url 'home' %}#home">Home</a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+
+                  <div class="equal-height col-lg-2 col-md-6 item">
+                      <div class="f-item link">
+                          <h4 class="widget-title">Services</h4>
+                          <ul>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/emDLgj">Machine Learning</a>
+                              </li>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/ye587b">Portfolio Development</a>
+                              </li>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/emDLgj">Data Visualization</a>
+                              </li>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/emDLgj">Data Analysis</a>
+                              </li>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/jyrVx7">Consultation</a>
+                              </li>
+                              <li>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.fiverr.com/share/jyrVx7">Assesments & Projects</a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+
+                  <div class="equal-height col-lg-4 col-md-6 item">
+                      <div class="f-item contact">
+                          <h4 class="widget-title">Contact Info</h4>
+                          <p>
+                               To learn Ethical Hacking from scratch contact us now.
+                          </p>
+                          <div class="address">
+                              <ul>
+                                  <li>
+                                      <strong>Email:</strong> salaarkhan311@gmail.com
+                                  </li>
+                                  <li>
+                                      <strong>Contact:</strong> +92-304-1540073
+                                  </li>
+                              </ul>
+                          </div>
+                          <ul class="social">
+                              <li class="facebook">
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/salaar.khan.7927408/"><i class="fab fa-facebook-f"></i></a>
+                              </li>
+                              <li class="instagram">
+                                  <a target="_blank" rel="noopener noreferrer" href="https://github.com/salaarkhan-dev/"><i class="fab fa-github"></i></a>
+                              </li>
+
+                              <li class="twitter">
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/salaar-khan1"><i class="fab fa-linkedin"></i></a>
+                              </li>
+                              
+                              <li class="youtube">
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/salaar._.khan/"><i class="fab fa-instagram"></i></a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="footer-bottom">
+              <div class="row">
+                  <div class="col-lg-6">
+                      
+                      <p>&copy; Created with <img alt="❤️" draggable="false" src="https://twemoji.maxcdn.com/2/72x72/2764.png" style="height: 1em; width: 1em; margin: 0px 0.05em 0px 0.1em; vertical-align: -0.1em;"> by <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/salaar.khan.7927408/"> Salaar Khan</a><a href="#"></a></p>
+                  </div>
+                  <div class="col-lg-6 text-right link">
+                      <ul>
+                          <li>
+                              <h6>Terms</h6>
+                          </li>
+                          <li>
+                              <h6>Privacy</h6>
+                          </li>
+                          <li>
+                              <h6>Support</h6>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- Shape -->
+      <div class="footer-shape" style="background-image: url({% static 'portfolio/assets/img/shape/1.svg' %});"></div>
+      <!-- End Shape -->
+    </footer>
+    <!-- End Footer-->
+
+  <!-- jQuery Frameworks
+  ============================================= -->
+  <script src="{% static 'portfolio/assets/js/jquery-1.12.4.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/popper.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/equal-height.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/jquery.appear.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/jquery.easing.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/jquery.magnific-popup.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/modernizr.custom.13711.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/owl.carousel.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/wow.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/progress-bar.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/isotope.pkgd.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/imagesloaded.pkgd.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/count-to.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/YTPlayer.min.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/circle-progress.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/bootsnav.js' %}"></script>
+  <script src="{% static 'portfolio/assets/js/main.js' %}"></script>
+
+</body>
+
+</html>
+ 
+
+
+
