--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -50,8 +50,6 @@
 
     <!-- Header 
     ============================================= -->
-    <!-- Header 
-    ============================================= -->
     <header id="home">
 
       <!-- Start Navigation -->
@@ -93,6 +91,9 @@
                       <li>
                           <a class="smooth-menu" href="#contact">Contact</a>
                       </li>
+                      <li>
+                        <a class="smooth-menu" href="{% url 'blog:all_blogs' %}">Blogs</a>
+                    </li>
                       <li>
                           <a class="smooth-menu" href="{% static 'portfolio/assets/cv/cv.pdf' %}" download>View CV</a>
                       </li>
