--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -62,7 +62,7 @@
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                       <i class="fa fa-bars"></i>
                   </button>
-                  <a class="navbar-brand smooth-menu" href="#home">
+                  <a class="navbar-brand smooth-menu" href="{% url 'home' %}">
                       <img src="{% static 'portfolio/assets/img/logo-light.png' %}" class="logo logo-display" alt="Logo">
                       <img src="{% static 'portfolio/assets/img/logo.png' %}" class="logo logo-scrolled" alt="Logo">
                   </a>
